Ficha tecnica en 6 paginas: Don't merge with project

--- a/Compromisos.tex
+++ b/Compromisos.tex
@@ -44,17 +44,17 @@ con los objetivos y con la metodología planteada.
 \end{instrucciones}
 
 %Final
-\begin{itemize}
-\item Artículo en revistas ISI (Web of Science) o Scopus
-\item Otro producto de nuevo conocimiento, de autoría o en coautoría
+%\begin{itemize}
+ Artículo en revistas ISI (Web of Science) o Scopus. 
+ Otro producto de nuevo conocimiento, de autoría o en coautoría
   del estudiante: artículo en revista ISI (Web of Science) o Scopus.
-\item Un artículo en revista de divulgación.
-\item Proyecto de investigación presentado a una entidad o
+ Un artículo en revista de divulgación.
+ Proyecto de investigación presentado a una entidad o
   convocatoria externa.
-\item Pasantía de investigación para el estudiante de Doctorado.
-\item Participaciòn con ponencia en evento académico nacional o
+ Pasantía de investigación para el estudiante de Doctorado.
+ Participaciòn con ponencia en evento académico nacional o
   internacional.
-\end{itemize}
+%\end{itemize}
 
 \begin{ideas}
   
@@ -99,3 +99,7 @@ de Antioquia, entregado por parte del estudiante de Doctorado.
 \end{ideas}
 
 
+%%% Local Variables: 
+%%% mode: latex
+%%% TeX-master: t
+%%% End: 
