--- a/Metodologia.tex
+++ b/Metodologia.tex
@@ -62,12 +62,15 @@ paridad R y ejemplificando cada paso con referencias concretas.
   señales en detectores, se debe hacer también simulaciones en PYTHIA
   del nivel de precisión con el que se pueden determinar observables
   en aceleradores que se puedan correlacionar con observables de otros
-  experimentos. A partir del valor experimental del ángulo de mezcla
-  atmosférico, en el modelo con ruptura bilineal de paridad R por
-  ejemplo, se predice que el decaimiento del neutralino a muon W, debe
-  ser muy similar al decaimiento del neutralino a tau W. En
-  \cite{DeCampos:2010yu} hemos determinado el nivel de precisión con
-  el que se pude medir esta correlación en el detector ATLAS del LHC.
+  experimentos.
+ % \begin{soloproyecto}
+ %    A partir del valor experimental del ángulo de mezcla
+ %  atmosférico, en el modelo con ruptura bilineal de paridad R por
+ %  ejemplo, se predice que el decaimiento del neutralino a muon W, debe
+ %  ser muy similar al decaimiento del neutralino a tau W. En
+ %  \cite{DeCampos:2010yu} hemos determinado el nivel de precisión con
+ %  el que se pude medir esta correlación en el detector ATLAS del LHC.
+ %   \end{soloproyecto}
   \label{item:9}
 \end{enumerate}
 Las simulaciones se realizan con el fin de desarrollar todas las
