--- a/Objetivos.tex
+++ b/Objetivos.tex
@@ -16,12 +16,14 @@ candidatos de materia oscura
 \begin{proyecto}
   En el modelo con ruptura bilineal de paridad R con el neutralino como la LSP, determinar con
   que nivel de precisión se podría llegar a medir en el LHC la correlación entre:
-  \begin{itemize}
-  \item El ángulo de mezcla solar y los decaimientos a tres cuerpos mediados
+%  \begin{itemize}
+%  \item 
+El ángulo de mezcla solar y los decaimientos a tres cuerpos mediados
     por sfermiones con muones y electrones en los estados finales.
-  \item La diferencia de masa atmosférica al cuadrado y la longitud de
+  %\item 
+La diferencia de masa atmosférica al cuadrado y la longitud de
     decaimiento del neutralino.
-  \end{itemize}
+%  \end{itemize}
 \end{proyecto}
 
 \item 
