--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -32,7 +32,10 @@ subterráneos a kilometros de profundidad.
 
 El Large Hadron Collider (LHC), en un tunel a 100 metros de profundidad y
 con una circunferencia de 27 Km, es el primer acelerador
-protón--protón que puede probar la escala del TeV.  Posee cuatro
+\begin{soloproyecto}
+protón--protón  
+\end{soloproyecto}
+que puede probar la escala del TeV.  Posee cuatro
 detectores, dos de los cuales están especialmente diseñados para
 encontrar señales de nueva física. El LHC  ha comenzado a
 operar en el 2010, aunque hasta el 2012 lo hará a la mitad de la
@@ -48,9 +51,16 @@ gamma por parte de Fermi--LAT, las cuales pueden ayudar a discernir si
 el origen de las anomalías detectadas en electrones y positrones es
 debida a fuentes astrofísicas como pulsares cercanos, o a la
 aniquilación o el decaimiento de materia oscura. El detector de rayos
-cósmicos AMS-02~\cite{ams:2009}, ya se encuentra en el transbordador
+cósmicos AMS-02~\cite{ams:2009},
+\begin{soloproyecto}
+ya se encuentra en el transbordador
 Endeavour para su próxima misión programada para el 29 de abril. Éste
-será instalado en la estación espacial internacional para medir el
+será instalado   
+\end{soloproyecto}
+\begin{soloficha}
+  ha sido instalado recientemente
+\end{soloficha}
+en la estación espacial internacional para medir el
 espectro de antiprotones y positrones en un rango de energía mucho más
 amplio y con una estadística mucho mejor que PAMELA.
 
@@ -64,9 +74,11 @@ cubrir todo el espacio de parámetros para materia oscura del modelo
 estándar supersimétrico mínimo restringido (Constrained MSSM de sus
 siglas en Inglés).
 
+\begin{soloproyecto}
 El satélite Planck fue lanzado en mayo de 2009.  Con los datos
 obtenidos de este experimento se espera medir la radiación cósmica de
 fondo con mucha más precisión que su antecesor WMAP.
+\end{soloproyecto}
 
 Finalmente hay varios experimentos de física de neutrinos en marcha
 que esperan mejorar los datos actuales de oscilaciones de neutrinos.
@@ -91,9 +103,13 @@ supersimétrico con ruptura bilineal de paridad R, quedan aún muchos
 aspectos que explorar.
 
 %evidencia 2
-En los últimos tiempos, sobre todos después de las medidas de
+En los últimos tiempos,
+\begin{soloproyecto}
+sobre todo después de las medidas de
 precisión de WMAP, el satelite de la NASA que ha medido con mucha
-precisión la radiación cósmica de fondo, se ha venido estableciendo la
+precisión la radiación cósmica de fondo,  
+\end{soloproyecto}
+se ha venido estableciendo la
 necesidad de una forma de materia compuesta por partículas débilmente
 interactuantes (WIMPs de sus siglas en inglés) que se conoce como
 materia oscura. Esta forma el 22\% de la materia del Universo. Sin
