--- a/Estudiantes.tex
+++ b/Estudiantes.tex
@@ -9,18 +9,17 @@ Además de participar en todos los pasos del desarrollo de la
 investigación, el estudiante  tendrán las siguientes
 tareas especificas:
 
-\begin{itemize}
-\item Establecer los diferentes conjuntos de parámetros $\lambda$ para valores diferentes del la carga $H$ de los operadores correspondientes. En caso de que alguno de ellos resulte con carga $n$ negativa, calcular el acoplamiento diferente de cero que surge después de hacer la rotación del potencial de K\"ahler.
-\item Encontrar la carga fraccionaria óptima de los nuevos flavones para explicar las masas y mezclas de los neutrinos a través del mecanismo seesaw en el modelo estándar supersimétrico con la simetría anómala $U(1)_H$ y violación de número leptónico a través de términos trilineales $\lambda$.
-\item Fijamdo el gravitino como la LSP del modelo, determinar los perfiles de background para electrones, positrones.
-\item Elaborar los programas en \texttt{Pythia} para calculo del flujo de electrones, positrones.
-\item Establecer las regiones de tiempo de vida media y masa del gravitino excluidas para los modelos bajo consideración.
-\item Participar activamente en la elaboración del artpículo al respecto.
-\item Participar en todas la actividades del estudiante de maestría
-\item Extender los programas computacionales para la simulación de señales supersimetrícas con ruptura bilineal de paridad R para analisar las nuevas correlaciones propuestas en el proyecto.
-\item Participar activamente en el análisis de resultados y en la
+%\begin{itemize}
+% \item Establecer los diferentes conjuntos de parámetros $\lambda$ para valores diferentes del la carga $H$ de los operadores correspondientes. En caso de que alguno de ellos resulte con carga $n$ negativa, calcular el acoplamiento diferente de cero que surge después de hacer la rotación del potencial de K\"ahler.
+ Encontrar la carga fraccionaria óptima de los nuevos flavones para explicar las masas y mezclas de los neutrinos a través del mecanismo seesaw en el modelo estándar supersimétrico con la simetría anómala $U(1)_H$ y violación de número leptónico a través de términos trilineales $\lambda$.
+% \item Fijando el gravitino como la LSP del modelo, determinar los perfiles de background para electrones, positrones.
+ % Elaborar los programas en \texttt{Pythia} para calculo del flujo de electrones, positrones.
+% \item Participar activamente en la elaboración del artículo al respecto.
+% \item Participar en todas la actividades del estudiante de maestría
+ Extender los programas computacionales para la simulación de señales supersimetrícas con ruptura bilineal de paridad R para analizar las nuevas correlaciones propuestas en el proyecto.
+ Participar activamente en el análisis de resultados y en la
   publicación del artículo al respecto.
-\end{itemize}
+%\end{itemize}
 
 %%% Local Variables: 
 %%% mode: latex
