--- a/Resultados.tex
+++ b/Resultados.tex
@@ -65,7 +65,9 @@ cuantitativos verificables as\'\i:
 
 
 Nos encontramos en una época única en la que se esperan grandes
-descubrimientos en el área de física de altas energías. El LHC ha
+descubrimientos en el área de física de altas energías.
+\begin{soloproyecto}
+El LHC ha
 comenzado a explorar la escala del TEV desde el 2010. Hasta el 2012
 estará acumulando datos a 7\,TeV de energía de centro de masa, y a
 partir del 2014 comenzará a funcionar a su energía de diseño de 14
@@ -80,7 +82,9 @@ predicha por el MSSM restringido. AMS-02 es un detector de rayos
 cósmicos que será llevado a la estación espacial internacional a bordo
 de la última misión del transbordador Endeavor el 29 de abril de
 2011. Se espera que compruebe y mejore las medidas de PAMELA sobre
-exceso en el flujo de positrones de rayos cósmicos. Hemos entrado en
+exceso en el flujo de positrones de rayos cósmicos.  
+\end{soloproyecto}
+ Hemos entrado en
 una nueva era de la física que, de obtener los resultados esperados,
 combinaría los descubrimientos de nuevas partículas, a los cada vez
 mejor establecidos resultados de física de neutrinos y observaciones
@@ -119,7 +123,7 @@ expansión acelerada del Universo. El otro escenario posible en el que
 no se encuentre al Higgs del modelo estándar, debe dar lugar a datos
 experimentales suficientes para dilucidar cual es realmente el
 mecanismo de ruptura de la simetría electrodébil. Nuestro grupo es el
-más directamente llamado a difundir estos avances en nuestra entorno social,
+más directamente llamado a difundir estos avances en nuestro entorno social,
 como lo ha venido haciendo a través de conferencias y cursos de
 extensión en los últimos años. Es importante que nuestro país siga
 participando en el desarrollo de la física fundamental, no sólo con la
